Tweaks to make everything working happy.

--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -211,9 +211,9 @@ Your Mailing List Subscriptions
 	
 	<!-- tmpl_if protected_directories --> 
 	
-	<div style="width:100%;background:#fff;border:1px solid black;padding:5px">
-	
-		<h2>Protected Directories</h2>
+<fieldset style="width:auto"> 
+		
+		<legend>Protected Directories</legend>
 			<p>Access these directories with your Profile Username/Password.
 		<ul>		
 			<!-- tmpl_loop protected_directories --> 
@@ -226,7 +226,7 @@ Your Mailing List Subscriptions
 				</p>
 			<!-- /tmpl_loop --> 
 		</ul>
-	</div> 
+	</fieldset> 
 	
 	<!-- /tmpl_if --> 
 
