--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -72,7 +72,7 @@
 		 </legend>
 		 
  
- <div id="text_message"> 
+ <div id="text_message" <!-- tmpl_if list_settings.show_message_body_plaintext_ver --><!-- tmpl_else -->style="display:none"<!-- /tmpl_if -->> 
  <!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
 </div> 
 </fieldset> 
