I made a big button!

--- a/dada/DADA/Template/templates/css/default.css
+++ b/dada/DADA/Template/templates/css/default.css
@@ -421,6 +421,10 @@ input.small_button {
 	font-size: .9em;
 }
 
+input.bigger_button { 
+	font-size: 1.75em; 
+}
+
 #Header input.small_button {
 	padding-top: 1px;
 	padding-bottom: 1px;
