Note about that pesky cronjob that needs to be set,

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -478,7 +478,7 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_default_mass_mailing_messages" id="install_default_mass_mailing_messages" value="1"  /><label for="install_default_mass_mailing_messages">Default Mass Mailing Messages</label></p> 
 
-<p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label></p> 
+<p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label><span class="alert">Optionally Requires Additional Configuration (cronjob)</span>	</p> 
 
 <p><input type="checkbox" name="install_change_list_shortname" id="install_change_list_shortname" value="1"  /><label for="install_change_list_shortname">Change Your List Short Name</label></p> 
 
