Closes #294 Email Update "For All Lists" doesn't update all lists, just current list

--- a/dada/DADA/Template/templates/update_email_results_widget.tmpl
+++ b/dada/DADA/Template/templates/update_email_results_widget.tmpl
@@ -5,7 +5,8 @@
 			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">				
 				<input type="hidden" name="f" value="admin_update_email" /> 
 				<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
-				<input type="hidden" name="updated_email" value="<!-- tmpl_var updated_email -->" /> 
+				<input type="hidden" name="updated_email" value="<!-- tmpl_var updated_email -->" />
+				<input type="hidden" name="for_all_lists" value="<!-- tmpl_var for_all_lists -->" /> 
 				<input type="submit" value="Update Subscription of: <!-- tmpl_var email --> to, <!-- tmpl_var updated_email -->" class="processing" />
 			</form> 
 		</div> 
