--- a/dada/DADA/Template/templates/membership.tmpl
+++ b/dada/DADA/Template/templates/membership.tmpl
@@ -296,7 +296,7 @@ function show_change_profile_password_form(){
 		<!-- tmpl_if root_login --> 
 	
 			<div id="change_profile_password_button">
-				<input type="button" value="Click to change Profile Password..." class="cautionary" onclick="show_change_profile_password_form();" />
+				<input type="button" value="Click to Change Profile Password..." class="cautionary" onclick="show_change_profile_password_form();" />
 			</div> 
 			<div id="change_profile_password_form" style="display:none">
 				<form name="change_profile_password" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
