--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -79,6 +79,12 @@
 				Yikes! Couldn't find an Unsubscribe Link (<code>&lt;!-- tmpl_var list_unsubscribe_link --&gt;</code>) in your template! If your mailing is sent out without one, somewhere, an unsubscribe link will be automatically appended to the top of your message. 
 			</p>
 		<!-- /tmpl_if --> 
+		<!-- tmpl_if message_body_tag_found_in_pt_mlm --> 
+		<!-- tmpl_else --> 
+		<p class="error">
+			Yikes! Couldn't find the <code>&lt;!-- tmpl_var message_body --&gt;</code> tag in your template! Please place this tag in your template, to ensure proper formatting.  
+		</p>			
+		<!-- /tmpl_if --> 
 		
 		
 		<p>
@@ -104,6 +110,12 @@
 				Yikes! Couldn't find an Unsubscribe Link (<code>&lt;!-- tmpl_var list_unsubscribe_link --&gt;</code>) in your template! If your mailing is sent out without one, somewhere, an unsubscribe link will be automatically appended to the top of your message. 
 			</p>
 		<!-- /tmpl_if -->
+		<!-- tmpl_if message_body_tag_found_in_html_mlm --> 
+		<!-- tmpl_else --> 
+		<p class="error">
+			Yikes! Couldn't find the <code>&lt;!-- tmpl_var message_body --&gt;</code> tag in your template! Please place this tag in your template, to ensure proper formatting.  
+		</p>			
+		<!-- /tmpl_if --> 
 		
 		
 		<p>
