--- a/dada/DADA/Template/templates/view_list_table_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_table_widget.tmpl
@@ -89,7 +89,7 @@
 		
 	    <td width="25">
 	  
-			<input type="checkbox" name="address" value="<!-- tmpl_var email -->" />
+			<input type="checkbox" name="address" value="<!-- tmpl_var email escape="HTML" -->" />
 
 		</td>
 			    <!-- /tmpl_unless --> 
@@ -116,7 +116,7 @@
 		    </a>
 		<!-- /tmpl_if --> 
 		<!-- tmpl_if expr="((no_email_links) != 1 && (type ne 'bounced_list'))" -->
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership;email=<!-- tmpl_var email -->;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->;query=<!-- tmpl_var query -->" >
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=membership;email=<!-- tmpl_var email ESCAPE=URL -->;type=<!-- tmpl_var type ESCAPE=URL -->;page=<!-- tmpl_var page ESCAPE=URL -->;order_by=<!-- tmpl_var order_by ESCAPE=URL -->;order_dir=<!-- tmpl_var order_dir ESCAPE=URL -->;query=<!-- tmpl_var query ESCAPE=URL -->" >
 				<!-- tmpl_var email --> 
 			</a>
 		<!-- /tmpl_if -->
