--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -37,6 +37,10 @@
 	<!-- /tmpl_if --> 
 <!-- /tmpl_if --> 
 
+
+	<script language="javascript" type="text/javascript" src="http://dadademo.com/tiny_mce/tiny_mce.js"></script>
+	<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/tiny_mce_config.js" type="text/javascript"></script>
+
 </head>
  
  <body id="DadaAdmin">
