--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -29,17 +29,19 @@
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if load_wysiwyg_editor --> 
-	<!-- tmpl_if FCKEDITOR_URL --> 
+	<!-- tmpl_if using_fckeditor --> 
 		<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
 	<!-- /tmpl_if -->
-	<!-- tmpl_if CKEDITOR_URL --> 
+	<!-- tmpl_if using_ckeditor --> 
 		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"  type="text/javascript" ></script>
 	<!-- /tmpl_if --> 
+	<!-- tmpl_if using_tiny_mce --> 
+		<script language="javascript" type="text/javascript" src="<!-- tmpl_var TINY_MCE_URL/tiny_mce.js"></script>
+		<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/tiny_mce_config.js" type="text/javascript"></script>
+	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
 
 
-	<script language="javascript" type="text/javascript" src="http://dadademo.com/tiny_mce/tiny_mce.js"></script>
-	<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/tiny_mce_config.js" type="text/javascript"></script>
 
 </head>
  
