--- a/dada/DADA/Template/templates/html_message_form_field_widget.tmpl
+++ b/dada/DADA/Template/templates/html_message_form_field_widget.tmpl
@@ -1,1 +1,29 @@
-<textarea name="html_message_body" cols="80" rows="30" id="html_message_body" class="html_message_body"><!-- tmpl_var html_message_body_content  escape="HTML" --></textarea>
+<!-- begin html_message_form_field_widget.tmpl --> 
+	<!-- tmpl_if using_fckeditor --> 
+			    <script type="text/javascript">   
+			    	<!--
+			        var oFCKeditor = new FCKeditor('html_message_body') ;
+			        <!-- tmpl_include FCKeditor_default_js_options.tmpl --> 
+					<!-- tmpl_if html_message_body_content_js_escaped --> 
+						oFCKeditor.Value = "<!-- tmpl_var html_message_body_content_js_escaped -->";
+					<!-- /tmpl_if --> 
+			        oFCKeditor.Create() ;
+			        //-->
+				</script> 
+	<!-- /tmpl_if --> 
+	<!-- tmpl_if using_ckeditor --> 
+			    	<textarea name="html_message_body" cols="80" rows="30" id="html_message_body"><!-- tmpl_var html_message_body_content  escape="HTML" --></textarea>
+					<script type="text/javascript">
+						CKEDITOR.replace( 'html_message_body' );
+					</script>
+	<!-- /tmpl_if --> 
+	
+	<!-- tmpl_if using_tiny_mce --> 
+		<textarea name="html_message_body" cols="80" rows="30" id="html_message_body" class="html_message_body"><!-- tmpl_var html_message_body_content  escape="HTML" --></textarea>					
+	<!-- /tmpl_if --> 
+	
+	<!-- tmpl_if using_no_wysiwyg_editor -->
+		<textarea name="html_message_body" cols="80" rows="30" id="html_message_body"><!-- tmpl_var html_message_body_content  escape="HTML" --></textarea>
+	<!-- /tmpl_if --> 
+
+<!-- end html_message_form_field_widget.tmpl --> 
