Save that pref!

--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -36,7 +36,7 @@
 		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"  type="text/javascript" ></script>
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if using_tiny_mce --> 
-		<script language="javascript" type="text/javascript" src="<!-- tmpl_var TINY_MCE_URL/tiny_mce.js"></script>
+		<script src="<!-- tmpl_var TINY_MCE_URL/tiny_mce.js" type="text/javascript"></script>
 		<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/tiny_mce_config.js" type="text/javascript"></script>
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
