--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -25,23 +25,21 @@
 
 
 <!-- tmpl_if load_modalbox --> 
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js"                   type="text/javascript"></script>
+  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js" type="text/javascript"></script>
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if load_wysiwyg_editor --> 
 	<!-- tmpl_if using_fckeditor --> 
-		<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
+		<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js"       type="text/javascript"></script>
 	<!-- /tmpl_if -->
 	<!-- tmpl_if using_ckeditor --> 
-		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"  type="text/javascript" ></script>
+		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"         type="text/javascript" ></script>
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if using_tiny_mce --> 
-		<script src="<!-- tmpl_var TINY_MCE_URL/tiny_mce.js" type="text/javascript"></script>
-		<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/tiny_mce_config.js" type="text/javascript"></script>
+		<script src="<!-- tmpl_var TINY_MCE_URL -->/tiny_mce.js"         type="text/javascript"></script>
+		<script src="<!-- tmpl_var TINY_MCE_URL -->/dada_mail_config.js" type="text/javascript"></script>
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
-
-
 
 </head>
  
