--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -478,10 +478,35 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_default_mass_mailing_messages" id="install_default_mass_mailing_messages" value="1"  /><label for="install_default_mass_mailing_messages">Default Mass Mailing Messages</label></p> 
 
-<p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label><span class="alert">Optionally Requires Additional Configuration (cronjob)</span>	</p> 
-
 <p><input type="checkbox" name="install_change_list_shortname" id="install_change_list_shortname" value="1"  /><label for="install_change_list_shortname">Change Your List Short Name</label></p> 
 
+
+<p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label> <span class="alert">Optionally Requires Additional Configuration (cronjob)</span>	</p> 
+
+<h2>WYSIWYG Editors</h2>
+
+<fieldset> 
+	<legend>Support Files Directory</legend>
+	<div class="clearskiesbox"> 
+		The below options will be configured to use the directory below to store their needed files.
+	</div>
+</p>
+
+<p>
+	<label for="support_files_dir_path">Support File Directory Path:</label><br />
+	<input type="text" name="support_files_dir_path"  id="support_files_dir_path" style="width:70%" value="<!-- tmpl_var support_files_dir_path -->" /><strong>/dada_mail_support_files</strong>
+	<br />
+	<label for="support_files_dir_url">Corresponding Support File Directory URL:</label>
+	<br />
+	<input type="text" name="support_files_dir_url" id="support_files_dir_url" style="width:70%" value="<!-- tmpl_var support_files_dir_url -->" /><strong>/dada_mail_support_files</strong>
+</p>
+
+</fieldset> 
+
+
+<input type="checkbox" name="wysiwyg_editor_install_fckeditor" id="wysiwyg_editor_install_fckeditor" value="1" checked="checked"/>			
+<label for="wysiwyg_editor_install_fckeditor">Install FCKeditor</label>
+		
 
 </fieldset> 
 
